--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -11,6 +11,8 @@
 				<th>ID</th>
 				<th>USERNAME</th>
 				<th>PASSWORD</th>
+				<th>FIRSTNAME</th>
+				<th>LASTNAME</th>
 				<th>CREATE_AT</th>
 				<th>MODIFIED_AT</th>
 			</tr>
@@ -21,6 +23,8 @@
 				<th scope="row" th:text="${user.id}">1</th>
 				<td th:text="${user.username}">neo</td>
 				<td th:text="${user.password}">Otto</td>
+				<td th:text="${user.firstname}">Otto</td>
+				<td th:text="${user.lastname}">Otto</td>
 				<td th:text="${user.createdAt}">6</td>
 				<td th:text="${user.updatedAt}">6</td>
 			</tr>
