--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -25,54 +25,51 @@
 					<div class="signup-form">
 						<h2 class="form-title">Sign up</h2>
 						<form method="POST" class="register-form" id="register-form"
-							action="#" th:action="@{/signup}"
-							th:object="${user}">
+							th:action="@{/signup}" th:object="${user}">
+							
 							<div class="form-group">
-							<label for="name"><i
-								class="zmdi zmdi-account material-icons-name"></i></label> <input
-								type="text" name="name" id="name" placeholder="Your Name"
-								th:field="*{username}" />
-
-							<p th:if="${#fields.hasErrors('username')}"
-								th:errors="*{username}">username length Error</p>
-					</div>
-					<!-- <div class="form-group">
+								<label for="username"><i
+									class="zmdi zmdi-account material-icons-name"></i></label> 
+									<input type="text" name="username" id="username" placeholder="Your Name">
+									<span  th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Userame Error</span>
+							</div>
+							<!-- <div class="form-group">
 						<label for="email"><i class="zmdi zmdi-email"></i></label> <input
 							type="email" name="email" id="email" placeholder="Your Email" />
 					</div> -->
-					<div class="form-group">
-						<label for="pass"><i class="zmdi zmdi-lock"></i></label> <input
-							type="password" name="pass" id="pass" placeholder="Password"
-							th:field="*{password}" />
-						
+							<div class="form-group" >
+								<label for="pass"><i class="zmdi zmdi-lock"></i></label>
+								 <input	type="password" name="pass" id="pass" placeholder="Password"
+									th:field="*{password}" /> 
+									<span  th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Name Error</span>
+							</div>
+							<div class="form-group">
+								<label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
+								<input type="password" name="re_pass" id="re_pass"
+									placeholder="Repeat your password" />
+							</div>
+							<div class="form-group">
+								<input type="checkbox" name="agree-term" id="agree-term"
+									class="agree-term" /> <label for="agree-term"
+									class="label-agree-term"><span><span></span></span>I
+									agree all statements in <a href="#" class="term-service">Terms
+										of service</a></label>
+							</div>
+							<div class="form-group form-button">
+								<input type="submit" name="signup" id="signup"
+									class="form-submit" value="Register" />
+							</div>
+						</form>
 					</div>
-					<div class="form-group">
-						<label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-						<input type="password" name="re_pass" id="re_pass"
-							placeholder="Repeat your password" />
+					<div class="signup-image">
+						<figure>
+							<img src="images/signup-image.jpg" alt="sing up image">
+						</figure>
+						<a href="#" class="signup-image-link">I am already member</a>
 					</div>
-					<div class="form-group">
-						<input type="checkbox" name="agree-term" id="agree-term"
-							class="agree-term" /> <label for="agree-term"
-							class="label-agree-term"><span><span></span></span>I
-							agree all statements in <a href="#" class="term-service">Terms
-								of service</a></label>
-					</div>
-					<div class="form-group form-button">
-						<input type="submit" name="signup" id="signup" class="form-submit"
-							value="Register" />
-					</div>
-					</form>
-				</div>
-				<div class="signup-image">
-					<figure>
-						<img src="images/signup-image.jpg" alt="sing up image">
-					</figure>
-					<a href="#" class="signup-image-link">I am already member</a>
 				</div>
 			</div>
-	</div>
-	</section>
+		</section>
 
 
 	</div>
