--- a/src/main/resources/templates/temp-confirm.html
+++ b/src/main/resources/templates/temp-confirm.html
@@ -26,7 +26,10 @@
 		<input type="hidden" value="${session.user.lastnaem}" />
 		<p th:text="${session.user.lastname}"></p>
 
-		<input type="submit" value="save" />
+		<!-- <input type="submit" value="save" /> -->
+		<input type="submit" class="button" name="save" value="Save">
+		<input type="submit" class="button" name="back-edit" value="Back to edit">
+		
 	</form>
 
 </body>
