done big picture

--- a/src/main/resources/templates/temp-confirm.html
+++ b/src/main/resources/templates/temp-confirm.html
@@ -23,7 +23,7 @@
 		<input type="hidden" value="${session.user.firstname}" />
 		<p th:text="${session.user.firstname}"></p>
 		<h3>lastname</h3>
-		<input type="hidden" value="${session.user.lastnaem}" />
+		<input type="hidden" value="${session.user.lastname}" />
 		<p th:text="${session.user.lastname}"></p>
 
 		<!-- <input type="submit" value="save" /> -->
