--- a/src/main/resources/templates/sign-up2.html
+++ b/src/main/resources/templates/sign-up2.html
@@ -25,7 +25,7 @@
 					<div class="signup-form">
 						<h2 class="form-title">Sign up 2</h2>
 						<form method="POST" class="register-form" id="register-form"
-							action="#" th:action="@{/signup2}" th:object="${user}">
+							action="#" th:action="@{/confirm}" th:object="${user}">
 
 
 							<div class="form-group">
@@ -50,7 +50,7 @@
 						<figure>
 							<img src="images/signin-image.jpg" alt="sing in image">
 						</figure>
-						<a href="#" class="signup-image-link">I am already member</a>
+					
 					</div>
 				</div>
 			</div>
