follow coding guideline

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -29,7 +29,7 @@
 
 					<div class="signup-form display-flex-center confirm-special">
 						<form method="POST" class="register-form" id="confirm-form"
-							action="#" th:action="@{/finish-signup}">
+							action="#" th:action="@{/signup-successed}">
 
 
 							<div class="form-group">
