--- a/src/main/resources/templates/successed.html
+++ b/src/main/resources/templates/successed.html
@@ -57,12 +57,15 @@ h2 {
 
 				</div>
 				<div class="display-flex-center">
-					<a href="/show" class="form-submit"> all data</a> <a href="/"
-						class="form-submit"> Home</a>
+					<a href="/show" class="form-submit"> all data</a> 
+					<a href="/"class="form-submit"> Home</a>
 				</div>
 		</section>
 
-
+		<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" class="form-submit" value="Sign Out" />
+		</form>
 	</div>
 
 	<!-- JS -->
