back to /signup to edit funciton

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -64,9 +64,9 @@
 							</div>
 							<div class="form-group form-button">
 								<!-- <input type="submit" name="signup2" id="signup2" class="form-submit" value="go-on" /> -->
-								<input type="submit" class="form-submit" name="action"
-									value="Save"> <input type="submit" class="form-submit"
-									name="action" value="Back to edit">
+								<input type="submit" class="form-submit" name="action" value="Save"> 
+								<input type="submit" class="form-submit" name="action" value="Back to SignUp">
+								<input type="submit" class="form-submit" name="action" value="Back to SignUp2">
 							</div>
 
 						</form>
