--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -13,6 +13,13 @@
 
 <!-- Main css -->
 <link rel="stylesheet" href="css/style.css">
+<style>
+.length-error {
+	color: red;
+}
+
+
+</style>
 </head>
 <body>
 
