--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -37,15 +37,15 @@
 							<div class="form-group">
 								<label for="username"><i
 									class="zmdi zmdi-account material-icons-name"></i></label> 
-									<input type="text" name="username" id="username" placeholder="Your Name">
+									<input type="text" name="username" id="username" placeholder="Your Name" th:field="*{username}">
 									<span class="length-error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</span>
+									<span th:text="${inuse}">test</span>
 							</div>
 					
 							<div class="form-group" >
 								<label for="pass"><i class="zmdi zmdi-lock"></i></label>
-								 <input	type="password" name="pass" id="pass" placeholder="Password"
-									th:field="*{password}" /> 
-									<span class="length-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Name Error</span>
+								 <input	type="password" name="pass" id="pass" placeholder="Password" th:field="*{password}" /> 
+									<span class="length-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</span>
 							</div>
 							<div class="form-group">
 								<label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
