--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,5 +17,9 @@
             <div><label> Password: <input type="password" name="password"/> </label></div>
             <div><input type="submit" value="Sign In"/></div>
         </form>
+        
+        <form th:action="@{/logout}" method="post">
+			<input type="submit" class="form-submit" value="Sign Out" />
+		</form>
     </body>
 </html>
