--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -39,7 +39,7 @@
 									class="zmdi zmdi-account material-icons-name"></i></label> 
 									<input type="text" name="username" id="username" placeholder="Your Name" th:field="*{username}">
 									<span class="length-error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</span>
-									<span th:text="${inuse}">test</span>
+									
 							</div>
 					
 							<div class="form-group" >
@@ -48,9 +48,11 @@
 									<span class="length-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</span>
 							</div>
 							<div class="form-group">
-								<label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-								<input type="password" name="re_pass" id="re_pass"
-									placeholder="Repeat your password" />
+								<label for="email"><i class="zmdi zmdi-lock-outline"></i></label>
+								<input type="text" th:field="*{email}" placeholder="Email"
+								class="form-control" /> <label
+								th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+								class="validation-message"></label>
 							</div>
 							
 							<div class="form-group form-button">
