--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -3,14 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-<footer class="fixed-bottom" style="position: fixed; bottom: 0">
-    <div class="container">
-        <span class="text-muted">by Hannah</span>
-    </div>
-</footer>
+	<footer class="fixed-bottom" style="position: fixed; bottom: 0">
+		<div class="container">
+			<span class="text-muted">by Hannah</span>
+		</div>
+	</footer>
+	<script src="webjars/jquery/1.9.1/jquery.min.js"></script>
+	<script src="webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	
 
 </body>
 </html>
