--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
 
+<!-- header.html -->
+<head th:fragment="header">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title th:text="${title}"></title>
+   
+    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.7/css/bootstrap.min.css" /> 
+    <link rel="stylesheet" type="text/css" th:href="@{css/style.css}" />
+</head>
+
+<body>
+	<nav role="navigation" class="navbar navbar-default">
+		<div class="">
+			<a href="/" class="navbar-brand">Home</a>
+		</div>
+		<div class="navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="/login">Login</a></li>
+				<li><a href="/signup">Signu up</a></li>
+
+			</ul>
+		</div>
+	</nav>
 </body>
 </html>
