--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,25 +1,81 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Login page </title>
-    </head>
-    <body>
-    <h2>Login page</h2>
-        <div th:if="${param.error}">
-            Invalid username and password.
-        </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
-        </div>
-        <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
-        </form>
-        
-        <form th:action="@{/logout}" method="post">
-			<input type="submit" class="form-submit" value="Sign Out" />
-		</form>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head>
+<title>Login page</title>
+<link rel="stylesheet" type="text/css"
+	href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" th:href="@{css/style.css}" />
+</head>
+<body>
+
+
+
+	<h2>Login page</h2>
+	<div th:if="${param.error}">Invalid username and password.</div>
+	<div th:if="${param.logout}">You have been logged out.</div>
+	<form th:action="@{/login}" method="post">
+		<div>
+			<label> User Name : <input type="text" name="username" />
+			</label>
+		</div>
+		<div>
+			<label> Password: <input type="password" name="password" />
+			</label>
+		</div>
+		<div>
+			<input type="submit" value="Sign In" />
+		</div>
+	</form>
+
+	<form th:action="@{/logout}" method="post">
+		<input type="submit" class="form-submit" value="Sign Out" />
+	</form>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+				<div class="card card-signin my-5">
+					<div class="card-body">
+						<h5 class="card-title text-center">Sign In</h5>
+						<form class="form-signin">
+							<div class="form-label-group">
+								<input type="email" id="inputEmail" class="form-control"
+									placeholder="Email address" required autofocus> <label
+									for="inputEmail">Email address</label>
+							</div>
+
+							<div class="form-label-group">
+								<input type="password" id="inputPassword" class="form-control"
+									placeholder="Password" required> <label
+									for="inputPassword">Password</label>
+							</div>
+
+							<div class="custom-control custom-checkbox mb-3">
+								<input type="checkbox" class="custom-control-input"
+									id="customCheck1"> <label class="custom-control-label"
+									for="customCheck1">Remember password</label>
+							</div>
+							<button class="btn btn-lg btn-primary btn-block text-uppercase"
+								type="submit">Sign in</button>
+							<hr class="my-4">
+							<button class="btn btn-lg btn-google btn-block text-uppercase"
+								type="submit">
+								<i class="fab fa-google mr-2"></i> Sign in with Google
+							</button>
+							<button class="btn btn-lg btn-facebook btn-block text-uppercase"
+								type="submit">
+								<i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook
+							</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="webjars/jquery/1.9.1/jquery.min.js"></script>
+	<script src="webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+</body>
 </html>
