--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,11 +35,9 @@
 			</button>
 			<div class="collapse navbar-collapse " id="navbarNav">
 				<ul class="navbar-nav nav justify-content-end">
-
-					<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-					<li class="nav-item"><a class="nav-link" href="/signup">SignUp</a></li>
-
 					<li class="nav-item" sec:authorize="isAuthenticated()"><a
+						class="nav-link" href="/to-do">TO-DO</a></li>
+					<li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')"><a
 						class="nav-link" href="/show">All data</a></li>
 
 				</ul>
@@ -47,15 +45,17 @@
 			<form th:action="
 						@{/logout}" method="post"
 				sec:authorize="isAuthenticated()">
+
 				<button class="btn btn-light my-2 my-sm-0" name="Submit"
 					value="Logout" type="Submit" th:text="Logout"></button>
 			</form>
-			<form th:action="
-						@{/login}" method="post"
-				sec:authorize="isAnonymous()">
-				<button class="btn btn-light my-2 my-sm-0" name="Submit"
-					value="Login" type="Submit" th:text="Login"></button>
-			</form>
+
+			<a class="nav-link" href="/signup" sec:authorize="isAnonymous()">
+				<button class="btn btn-light my-2 my-sm-0" value="Sign Up">Sign
+					Up</button>
+			</a> <a class="nav-link" href="/login" sec:authorize="isAnonymous()">
+				<button class="btn btn-light my-2 my-sm-0" value="login">Login</button>
+			</a>
 		</nav>
 	</div>
 
@@ -64,16 +64,20 @@
 		<h2>Welcome</h2>
 		<div sec:authorize="isAuthenticated()">This content is only
 			shown to authenticated users.</div>
-		<div sec:authorize="hasRole('ROLE_ADMIN')">This content is only
-			shown to <span class="font-weight-bold">administrators.</span></div>
-		<div sec:authorize="hasRole('ROLE_USER')">This content is only
-			shown to <span class="font-weight-bold">users.</span></div>
-			
-		<div>Username: <span sec:authentication="name"></span></div>
+		<div sec:authorize="hasRole('ROLE_ADMIN')">
+			This content is only shown to <span class="font-weight-bold">administrators.</span>
+		</div>
+		<div sec:authorize="hasRole('ROLE_USER')">
+			This content is only shown to <span class="font-weight-bold">users.</span>
+		</div>
 
-	Roles:<span sec:authorize="isAuthenticated()"
-		sec:authentication="principal.authorities">[ROLE_USER,
-		ROLE_ADMIN]</span>
+		<div>
+			Username: <span sec:authentication="name"></span>
+		</div>
+
+		Roles:<span sec:authorize="isAuthenticated()"
+			sec:authentication="principal.authorities">[ROLE_USER,
+			ROLE_ADMIN]</span>
 	</div>
 
 
