--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -3,72 +3,119 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-
 <style>
 #users {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	border-collapse: collapse;
+	width: 100%;
 }
 
 #users td, #users th {
-    border: 1px solid #ddd;
-    padding: 8px;
+	border: 1px solid #ddd;
+	padding: 8px;
 }
 
-#users tr:nth-child(even){background-color: #f2f2f2;}
+#users tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
 
-#users tr:hover {background-color: #ddd;}
+#users tr:hover {
+	background-color: #ddd;
+}
 
 #users th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color:  #bf0000;
-    color: white;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	text-align: left;
+	background-color: #bf0000;
+	color: white;
 }
-
-
 </style>
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
 </head>
 <body>
-	<table id="users">
-		<thead>
-			<tr>
-				<th>ID</th>
-				<th>USERNAME</th>
-				<th>PASSWORD</th>
-				<th>FIRSTNAME</th>
-				<th>LASTNAME</th>
-				
-				<th>EMAIL</th>
-				<th>EDIT</th>
-				<th>DELETE</th>
-				<th>CREATE_AT</th>
-				<th>MODIFIED_AT</th>
-			</tr>
-		</thead>
+	<!-- navbar -->
+	<nav class="navbar navbar-expand-lg shadow-sm ">
+		<div class="container">
+			<a class="navbar-brand" href="/"> <img
+				src="https://seeklogo.com/images/R/rakuten-logo-A75F21521D-seeklogo.com.png" width="30"
+				height="30" alt="Home">
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<nav class="my-2 my-md-0 mr-md-3 collapse navbar-collapse">
+				<a class="p-2 text-dark" href="/about">About</a> <a class="p-2 text-dark" href="/contact">Contact</a>
+				<a class="p-2 text-dark" href="/to-do" sec:authorize="isAuthenticated()">TO-DO</a> <a
+					class="p-2 text-dark" href="/show" sec:authorize="hasRole('ROLE_ADMIN')">All data</a>
+			</nav>
+			<!-- <form th:action="
+						@{/logout}" method="post"
+				sec:authorize="isAuthenticated()">
 
-		<tbody>
-			<tr th:each="user : ${users}">
-				<td scope="row" th:text="${user.id}"></td>
-				<td th:text="${user.username}"></td>
-				<td th:text="${user.password}"></td>
-				<td th:text="${user.firstname}"></td>
-				<td th:text="${user.lastname}"></td>
-				<td th:text="${user.email}"></td>
-				
-				<td><a th:href="@{/{user.id}/toEdit(id=*{user.id})}">edit</a></td>
-				<td><a th:href="@{/delete(id=${user.id})}">delete</a></td>
-				<td th:text="${user.createdAt}"></td>
-				<td th:text="${user.updatedAt}"></td>
-				
-			</tr>
-
-		</tbody>
-
-	</table>
-	
-	<a href="/">home page</a>
+				<button class="btn btn-light my-2 my-sm-0" name="Submit"
+					value="Logout" type="Submit" th:text="Logout"></button>
+			</form> -->
+			<div class="d-inline" sec:authorize="isAuthenticated()">
+				<span class="navbar-text mr-2">Hi! </span> <span class="navbar-text mr-2"
+					th:text="${currentUser.firstname}"> firstname </span> <span class="navbar-text mr-2"
+					th:text="${currentUser.lastname}"> lastname </span>
+			</div>
+			<a class="nav-link" href="/logout" sec:authorize="isAuthenticated()">
+				<button class="btn btn-outline-primary my-2 my-sm-0" value="Logout">Logout</button>
+			</a> <a class="nav-link" href="/login" sec:authorize="isAnonymous()">
+				<button class="btn btn-outline-primary my-2 my-sm-0" value="login">Login</button>
+			</a> <a class="nav-link" href="/signup" sec:authorize="isAnonymous()">
+				<button class="btn btn-outline-primary my-2 my-sm-0" value="Sign Up">Sign Up</button>
+			</a>
+		</div>
+	</nav>
+	<div class="container-fluid">
+		<div class="table-responsive">
+			<table class="table table-striped ">
+				<thead class="thead-dark">
+					<tr>
+						<th scope="col">ID</th>
+						<th scope="col">USERNAME</th>
+						<th scope="col">PASSWORD</th>
+						<th scope="col">FIRSTNAME</th>
+						<th scope="col">LASTNAME</th>
+						<th scope="col">EMAIL</th>
+						<th scope="col">EDIT</th>
+						<th scope="col">DELETE</th>
+						<th scope="col">CREATE_AT</th>
+						<th scope="col">MODIFIED_AT</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="user : ${users}">
+						<td scope="row" th:text="${user.id}"></td>
+						<td th:text="${user.username}"></td>
+						<td th:text="${user.password}"></td>
+						<td th:text="${user.firstname}"></td>
+						<td th:text="${user.lastname}"></td>
+						<td th:text="${user.email}"></td>
+						<td><a th:href="@{/{user.id}/toEdit(id=*{user.id})}">edit</a></td>
+						<td><a th:href="@{/delete(id=${user.id})}">delete</a></td>
+						<td th:text="${user.createdAt}"></td>
+						<td th:text="${user.updatedAt}"></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
 </body>
 </html>
