--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -1,81 +1,134 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Sign Up Form</title>
-
-<!-- Font Icon -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="../../../../favicon.ico">
+<title>Checkout example for Bootstrap</title>
+<!-- Bootstrap CSS -->
 <link rel="stylesheet"
-	href="fonts/material-icon/css/material-design-iconic-font.min.css">
-
-<!-- Main css -->
-<link rel="stylesheet" href="css/style.css">
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<!-- Custom styles for this template -->
 <style>
-.length-error {
-	color: red;
+.container {
+	max-width: 960px;
 }
 
-
+.lh-condensed {
+	line-height: 1.25;
+}
 </style>
 </head>
-<body>
-
-	<div class="main">
-
-		<!-- Sign up form -->
-		<section class="signup">
-			<div class="container">
-				<div class="signup-content">
-					<div class="signup-form">
-						<h2 class="form-title">Sign up</h2>
-						<form method="POST" class="register-form" id="register-form"
-							th:action="@{/signup2}" th:object="${user}">
-							
-							<div class="form-group">
-								<label for="username"><i
-									class="zmdi zmdi-account material-icons-name"></i></label> 
-									<input type="text" name="username" id="username" placeholder="Your Name" th:field="*{username}">
-									<span class="length-error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</span>
-									
+<body class="bg-light">
+	<div class="container">
+		<div class="my-3 mt-5 text-center">
+			<img class="d-inline mx-auto mb-4" src="images/note.png" alt="" width="60"
+				height="60">
+			<h2 class="d-inline">Sign Up form</h2>
+			
+		</div>
+		<div class="row justify-content-md-center">
+			<div class="col-md-8 order-md-1">
+				<h4 class="mb-3">Username, Password & Email</h4>
+				<form class="needs-validation" method="POST" novalidate 
+					th:action="@{/signup2}"
+					th:object="${user}">
+					<div class="mb-3">
+						<label for="username">Username</label>
+						<div class="input-group">
+							<div class="input-group-prepend">
+								<span class="input-group-text">@</span>
 							</div>
-					
-							<div class="form-group" >
-								<label for="pass"><i class="zmdi zmdi-lock"></i></label>
-								 <input	type="password" name="pass" id="pass" placeholder="Password" th:field="*{password}" /> 
-									<span class="length-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</span>
-							</div>
-							<div class="form-group">
-								<label for="email"><i class="zmdi zmdi-lock-outline"></i></label>
-								<input type="text" th:field="*{email}" placeholder="Email"
-								class="form-control" /> <label
-								th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-								class="validation-message"></label>
-							</div>
-							
-							<div class="form-group form-button">
-								<input type="submit" name="signup" id="signup"
-									class="form-submit" value="Register" />
-							</div>
-						</form>
+							<input type="text" class="form-control" id="username" placeholder="Username" th:field="*{username}" required>
+							<span class="length-error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</span>
+							<div class="invalid-feedback" style="width: 100%;">Your username is required.</div>
+						</div>
 					</div>
-					<div class="signup-image">
-						<figure>
-							<img src="images/signup-image.jpg" alt="sing up image">
-						</figure>
-						
+					<div class="mb-3">
+						<label for="password">Password</label>
+						<div class="input-group">
+							<input type="password" class="form-control" id="password" placeholder="Password" th:field="*{password}" required>
+							<span class="length-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</span>
+							<div class="invalid-feedback" style="width: 100%;">Your password is required.</div>
+						</div>
 					</div>
-				</div>
+					<div class="mb-3">
+						<label for="email">Email</label> <input type="email" class="form-control" id="email"
+							placeholder="you@example.com" th:field="*{email}">
+							<span class="length-error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Password Error</span>
+						<div class="invalid-feedback">Please enter a valid email address for shipping updates.</div>
+					</div>
+					<hr class="mb-4">
+					<button class="btn btn-primary btn-lg btn-block" type="submit">Continue to register</button>
+				</form>
 			</div>
-		</section>
-
-
+		</div>
+		<footer class="my-5 pt-5 text-muted text-center text-small">
+			<p class="mb-1">&copy; 2017-2018 Company Name</p>
+			<ul class="list-inline">
+				<li class="list-inline-item"><a href="/">Home</a></li>
+			</ul>
+		</footer>
 	</div>
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script>
+		window.jQuery
+				|| document
+						.write(
+								'<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+	</script>
+	<script src="../../assets/js/vendor/popper.min.js"></script>
+	<script src="../../dist/js/bootstrap.min.js"></script>
+	<script src="../../assets/js/vendor/holder.min.js"></script>
+	<script>
+		// Example starter JavaScript for disabling form submissions if there are invalid fields
+						(
+								function() {
+									'use strict';
 
-	<!-- JS -->
-	<script src="vendor/jquery/jquery.min.js"></script>
-	<script src="js/main.js"></script>
+									window
+											.addEventListener(
+													'load',
+													function() {
+														// Fetch all the forms we want to apply custom Bootstrap validation styles to
+														var forms = document
+																.getElementsByClassName('needs-validation');
+
+														// Loop over them and prevent submission
+														var validation = Array.prototype.filter
+																.call(
+																		forms,
+																		function(
+																				form) {
+																			form
+																					.addEventListener(
+																							'submit',
+																							function(
+																									event) {
+																								if (form
+																										.checkValidity() === false) {
+																									event
+																											.preventDefault();
+																									event
+																											.stopPropagation();
+																								}
+																								form.classList
+																										.add('was-validated');
+																							},
+																							false);
+																		});
+													}, false);
+								})();
+	</script>
 </body>
 </html>
