--- a/src/main/resources/templates/sign-up2.html
+++ b/src/main/resources/templates/sign-up2.html
@@ -1,66 +1,188 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Sign Up Form 2</title>
-
-<!-- Font Icon -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="../../../../favicon.ico">
+<title>Checkout example for Bootstrap</title>
+<!-- Bootstrap CSS -->
 <link rel="stylesheet"
-	href="fonts/material-icon/css/material-design-iconic-font.min.css">
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<!-- Custom styles for this template -->
+<!-- Latest compiled and minified CSS -->
 
-<!-- Main css -->
-<link rel="stylesheet" href="css/style.css">
+<style>
+.container {
+	max-width: 960px;
+}
+
+.lh-condensed {
+	line-height: 1.25;
+}
+</style>
 </head>
-<body>
-
-	<div class="main">
-
-		<!-- Sign up form -->
-		<section class="signup">
-			<div class="container">
-				<div class="signup-content">
-					<div class="signup-form">
-						<h2 class="form-title">Sign up 2</h2>
-						<form method="POST" class="register-form" id="register-form"
-							action="#" th:action="@{/confirm}" th:object="${user}">
-
-
-							<div class="form-group">
-								<label for="firstname"><i class="zmdi zmdi-lock"></i></label> <input
-									type="text" name="firstname" id="firstname"
-									placeholder="firstname" th:field="*{firstname}" />
-							</div>
-							<div class="form-group">
-								<label for="lastname"><i class="zmdi zmdi-lock"></i></label> <input
-									type="text" name="lastname" id="lastname"
-									placeholder="lastname" th:field="*{lastname}" />
-							</div>
-
-							<div class="form-group form-button">
-								<input type="submit" name="signup2" id="signup2"
-									class="form-submit" value="go-on" />
-							</div>
-						
-						</form>
+<body class="bg-light">
+	<div class="container">
+		<div class="my-3 mt-5 text-center">
+			<img class="d-inline mx-auto mb-4" src="images/note.png" alt="" width="60" height="60">
+			<h2 class="d-inline">User Information</h2>
+		</div>
+		<div class="row justify-content-md-center">
+			<div class="col-md-8 order-md-1">
+				<form class="needs-validation" method="POST" novalidate th:action="@{/confirm}"
+					th:object="${user}">
+					<div class="row">
+						<div class="col-md-6 mb-3">
+							<label for="firstName">First name</label> <input type="text" class="form-control"
+								id="firstName" placeholder="" value="" th:field="*{firstname}" required>
+							<div class="invalid-feedback">Valid first name is required.</div>
+						</div>
+						<div class="col-md-6 mb-3">
+							<label for="lastName">Last name</label> <input type="text" class="form-control" id="lastName"
+								placeholder="" value="" th:field="*{lastname}" required>
+							<div class="invalid-feedback">Valid last name is required.</div>
+						</div>
 					</div>
-					<div class="signup-image">
-						<figure>
-							<img src="images/signin-image.jpg" alt="sing in image">
-						</figure>
-					
+					<div class="row">
+						<div class="col-md-6 mb-3 ">
+							<label for="" class="d-block">Gender</label>
+							<div class="form-check form-check-inline align-middle mr-6">
+								<input class="form-check-input" type="radio" name="gender" id="male" value="male"> <label
+									class="form-check-label" for="male">Male</label>
+							</div>
+							<div class="form-check form-check-inline align-middle">
+								<input class="form-check-input" type="radio" name="gender" id="female" value="female">
+								<label class="form-check-label" for="female">Female</label>
+							</div>
+						</div>
+						<div class="col-md-6 mb-3">
+							<label for="country">Country</label> <input type="text" class="form-control" id="country"
+								placeholder="" value="" > 
+							<div class="invalid-feedback">Valid last name is required.</div>
+						</div>
 					</div>
-				</div>
+					<!-- <div class="row">
+						<div class="col-md-5 mb-3">
+							<label for="country">Country</label> <select class="custom-select d-block w-100" id="country"
+								required>
+								<option value="">Choose...</option>
+								<option>United States</option>
+							</select>
+							<div class="invalid-feedback">Please select a valid country.</div>
+						</div>
+						<div class="col-md-4 mb-3">
+							<label for="state">State</label> <select class="custom-select d-block w-100" id="state"
+								required>
+								<option value="">Choose...</option>
+								<option>California</option>
+							</select>
+							<div class="invalid-feedback">Please provide a valid state.</div>
+						</div>
+						<div class="col-md-3 mb-3">
+							<label for="zip">Zip</label> <input type="text" class="form-control" id="zip" placeholder=""
+								required>
+							<div class="invalid-feedback">Zip code required.</div>
+						</div>
+					</div>
+					<hr class="mb-4">
+					<div class="custom-control custom-checkbox">
+						<input type="checkbox" class="custom-control-input" id="same-address"> <label
+							class="custom-control-label" for="same-address">Shipping address is the same as my
+							billing address</label>
+					</div>
+					<div class="custom-control custom-checkbox">
+						<input type="checkbox" class="custom-control-input" id="save-info"> <label
+							class="custom-control-label" for="save-info">Save this information for next time</label>
+					</div>
+					<hr class="mb-4">
+					<h4 class="mb-3">Payment</h4>
+					<div class="d-block my-3">
+						<div class="custom-control custom-radio">
+							<input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked
+								required> <label class="custom-control-label" for="credit">Credit card</label>
+						</div>
+						<div class="custom-control custom-radio">
+							<input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
+							<label class="custom-control-label" for="debit">Debit card</label>
+						</div>
+						<div class="custom-control custom-radio">
+							<input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
+							<label class="custom-control-label" for="paypal">PayPal</label>
+						</div>
+					</div>
+					 -->
+					<hr class="mb-4">
+					<button class="btn btn-primary btn-lg btn-block" type="submit">Confirm</button>
+				</form>
 			</div>
-		</section>
-
-
+		</div>
+		<footer class="my-5 pt-5 text-muted text-center text-small">
+			<p class="mb-1">&copy; 2017-2018 Company Name</p>
+			<ul class="list-inline">
+				<li class="list-inline-item"><a href="#">Privacy</a></li>
+				<li class="list-inline-item"><a href="#">Terms</a></li>
+				<li class="list-inline-item"><a href="#">Support</a></li>
+			</ul>
+		</footer>
 	</div>
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	
+	<script>
+		window.jQuery
+				|| document
+						.write(
+								'<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+	</script>
+	
+	<script>
+		// Example starter JavaScript for disabling form submissions if there are invalid fields
+						(
+								function() {
+									'use strict';
 
-	<!-- JS -->
-	<script src="vendor/jquery/jquery.min.js"></script>
-	<script src="js/main.js"></script>
+									window
+											.addEventListener(
+													'load',
+													function() {
+														// Fetch all the forms we want to apply custom Bootstrap validation styles to
+														var forms = document
+																.getElementsByClassName('needs-validation');
+
+														// Loop over them and prevent submission
+														var validation = Array.prototype.filter
+																.call(
+																		forms,
+																		function(
+																				form) {
+																			form
+																					.addEventListener(
+																							'submit',
+																							function(
+																									event) {
+																								if (form
+																										.checkValidity() === false) {
+																									event
+																											.preventDefault();
+																									event
+																											.stopPropagation();
+																								}
+																								form.classList
+																										.add('was-validated');
+																							},
+																							false);
+																		});
+													}, false);
+								})();
+	</script>
 </body>
 </html>
